--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -16,8 +16,8 @@
     --navbar-w: 58px;
 
     background-color: rgb(31 41 55);
-    --background: #ffffff;
-    --foreground: #171717;
+    --background: rgb(31 41 55);
+    --foreground: #ededed;
 }
 
 * {
@@ -37,6 +37,22 @@ body {
     min-height: 100vh;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    height: 1rem;
+    width: 0;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--background);
+}
+
+::-webkit-scrollbar-thumb {
+    border: calc(1rem / 3) solid var(--background);
+    border-radius: 1rem;
+    background: linear-gradient(45deg, #00aeff, #a68eff);
 }
 
 @media (prefers-color-scheme: dark) {
